--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 sudo: required
 env:
   global:
@@ -26,8 +27,8 @@ before_install:
 - sudo curl -L "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname
   -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 - sudo chmod +x /usr/local/bin/docker-compose
-- "./deploy/kubernetes/scripts/install-minikube.sh"
-- "./deploy/kubernetes/scripts/init-helm.sh"
+- ./deploy/kubernetes/scripts/install-minikube.sh
+- ./deploy/kubernetes/scripts/init-helm.sh
 before_script:
 - docker --version
 - docker-compose --version
