--- a/cmd/opctl/cmd_black_list.yaml
+++ b/cmd/opctl/cmd_black_list.yaml
@@ -26,3 +26,10 @@
 - DescribeCombinationPrices
 - ModifyCombinationPrice
 - DeleteCombinationPrices
+- InitBillingTask
+- UpdateBillingTask
+- StopBillingTask
+- StartBillingTask
+- TerminateBillingTask
+- ChargingTask
+- RefundTask
